// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`List > should render simple list 1`] = `
<div>
  <rk-list
    aria-label="list"
    class="custom-class"
    role="listbox"
    tabindex="0"
  >
    <!---->
     
    <rk-body>
      <!---->
      <rk-list-item
        aria-current="false"
        aria-selected="false"
        data-path="0"
        role="option"
      >
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 1
        </p>
        <!---->
        <!---->
      </rk-list-item>
      <rk-list-item
        aria-current="false"
        aria-selected="false"
        data-path="1"
        role="option"
      >
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 2
        </p>
        <!---->
        <!---->
      </rk-list-item>
      
      <!---->
    </rk-body>
     
    <!---->
  </rk-list>
  
</div>
`;

exports[`List > should render simple list 2`] = `
<div>
  <rk-list
    aria-label="list"
    class="another-class"
    role="listbox"
    tabindex="0"
  >
    <!---->
     
    <rk-body>
      <!---->
      <rk-list-item
        aria-current="false"
        aria-selected="false"
        data-path="0"
        role="option"
      >
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 1
        </p>
        <!---->
        <!---->
      </rk-list-item>
      <rk-list-item
        aria-current="false"
        aria-selected="false"
        data-path="1"
        role="option"
      >
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 2
        </p>
        <!---->
        <!---->
      </rk-list-item>
      
      <!---->
    </rk-body>
     
    <!---->
  </rk-list>
  
</div>
`;
